// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pf4SelectWrapper /> should render correctly 1`] = `
<Component
  id="bazz"
  name="bazz"
  options={
    Array [
      Object {
        "label": "Foo",
        "value": "bar",
      },
    ]
  }
/>
`;

exports[`<Pf4SelectWrapper /> should render correctly in error state 1`] = `
<Component
  id="bazz"
  isRequired={true}
  name="bazz"
  options={
    Array [
      Object {
        "label": "Foo",
        "value": "bar",
      },
    ]
  }
  validate={[Function]}
/>
`;

exports[`<Pf4SelectWrapper /> should render correctly with description 1`] = `
<Component
  description="description"
  id="bazz"
  name="bazz"
  options={
    Array [
      Object {
        "label": "Foo",
        "value": "bar",
      },
    ]
  }
/>
`;
